
RRDtool git - 2022-04-08
==========================

Bugfixes
--------
* Update tarball download link in doc <c72578>
* Fix unsigned integer overflow in rrdtool first. Add test for rrd_first() <c72578>
* Fix tests under MSYS2 (Windows) <c72578>
* Fix BUILD_DATE in rrdtool help output <c72578>
* acinclude.m4: Include <stdlib.h> when using exit <ryandesign>
* rrdtool-release: Create NUMVERS from VERSION file <c72578>


Features
--------
* Remove autogenerated files from git repo (configure, Makefile.in, conftools, rrd_config.h.in) <c72578>



RRDtool 1.8.0 - 2022-03-13
==========================

Bugfixes
--------
* python bindings: properly convert double values of rrd info <Stefan Gluszek>
* failed to expand 'Py_UNUSED', Invalid usage when expanding  'Py_UNUSED' <c72578>
* document --showtime in xport help output <c72578>
* fix --use-nan-for-all-missing-data <c72578>
* update rrdruby.pod <c72578>
* add missing rrdruby.pod and rrdpython.pod to dist <c72578>
* Set first_weekday to 0 (Sunday), when HAVE__NL_TIME_WEEK_1STDAY is not defined <nirgal>
* fix median calculation for all NaN inputs <c72578>
* fix potential leak in xport during failure <c72578>
* fix many warnings raised by Cppcheck <c72578>
* fix many compiler warnings from latest gcc <c72578>
* ensure proper initialization in rrd_daemon <clarfonthey>
* cleanup testsuite <nirgal>
* better testing <c72578>
* avoid invalid read in rrd_client <pallas>
* add symbols from rrdc to librrd <pallas>
* Fix duplicate write_changes_to_disk() calls when HAVE_LIBRADOS is true and HAVE_MMAP is false <yil-cpr>
* documentation updates <nirgal>
* for SMIN example in docs <Thomas-Gelf>
* fix for pyton3 compatibility <SuperHeron>
* freemem only for valid status <Christian Kr"oger>
* fix double meaning of time 0 as uninitialized value <neirbowj>
* fix for zfs not supporting fallocate. this makes resize work on zfs <zelsing>
* add rrdrados.pod to dist <Jeron Roovers>